# fleet-liaison-tender

./: CHARTER.md  Makefile  README.md  pyproject.toml  setup.py  tender.py  test_context_tender.py
tenderctl/: __init__.py  bottles.py  cli.py  compression.py  github_client.py  priority.py  state.py
tenderctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_bottles.py  test_cli.py  test_compression.py  test_priority.py
