[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenderctl"
version = "0.1.0"
description = "Fleet Liaison Tender CLI — Cloud-edge communication control"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SuperInstance", email = "193104091+SuperInstance@users.noreply.github.com"}
]
keywords = ["fleet", "liaison", "tender", "cli", "edge", "cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
tenderctl = "tenderctl.cli:main"

[project.urls]
Homepage = "https://github.com/SuperInstance/fleet-liaison-tender"
Repository = "https://github.com/SuperInstance/fleet-liaison-tender"

[tool.setuptools]
packages = ["tenderctl"]

[tool.setuptools.package-data]
tenderctl = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
